--- a/LeastSquaresMethod/least_sqaure_method.ipynb
+++ b/LeastSquaresMethod/least_sqaure_method.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*ps: numpy.poly1d([1,2,3])  生成$1*x^2+2*x^1+3*x^0$*"
+    "*ps: numpy.poly1d([1,2,3])  生成  $1x^2+2x^1+3x^0$*"
    ]
   },
   {
@@ -288,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 最小二乘法,加正则化项\n",
